--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,8 @@ body {
 }
 
 .App {
-  width: 50%;
+  width: 100%;
+  max-width: 40rem;
   background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
   background-size: 300% 300%;
   border-radius: 0.5rem;
@@ -50,6 +51,12 @@ body {
   padding: 1rem;
 
   animation: gradient 10s ease infinite;
+}
+
+@media screen and (max-width: 700px) {
+  .App {
+    width: 100%;
+  }
 }
 
 .main__container {
@@ -161,10 +168,10 @@ body {
   transition: all 350ms;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 700px) {
   .game__restart {
-    font-size: 0.8rem;
-    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    padding: 1rem 1.5rem;
   }
 }
 
@@ -178,7 +185,7 @@ body {
   margin-bottom: 1.5rem;
   display: grid;
   justify-content: center;
-  grid-template: repeat(3, 60px) / repeat(3, 60px);
+  grid-template: repeat(3, 70px) / repeat(3, 70px);
 }
 
 .square {
@@ -188,12 +195,6 @@ body {
   border-radius: 0.5rem;
 
   transition: all 350ms;
-}
-
-@media screen and (max-width: 500px) {
-  .board {
-    grid-template: repeat(3, 50px) / repeat(3, 50px);
-  }
 }
 
 .square:hover {
@@ -206,7 +207,7 @@ body {
   text-align: center;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 700px) {
   .game__title {
     font-size: 1.5rem;
   }
